# easypaste

./: .gitignore  LICENSE  README.md
backend/: .env.production  package-lock.json  package.json
backend/easypaste-cli/: Cargo.toml
backend/public/downloads/: .gitkeep
backend/src/: app.js
backend/src/config/: database.js
backend/src/controllers/: pasteController.js
backend/src/models/: Paste.js
backend/src/routes/: pasteRoutes.js  viewRoutes.js
backend/src/utils/: codeGenerator.js
backend/web/: index.html  package-lock.json  package.json
backend/web/public/: ICONS.md
backend/web/src/: App.css  App.jsx  index.css
easypaste-cli/: Cargo.toml  README.md  build-all.sh  build.sh
easypaste-cli/.github/workflows/: release.yml
easypaste-cli/src/: main.rs
