[package]
name = "easypaste"
version = "1.0.0"
edition = "2021"
authors = ["EasyPaste"]
description = "Command line tool for sharing text and code instantly"
homepage = "https://easypaste.xyz"

[[bin]]
name = "easypaste"
path = "src/main.rs"

[[bin]]
name = "ep"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
dirs = "5.0"
tempfile = "3.8"
colored = "2.1"
atty = "0.2"
qrcode = "0.14"